--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,70 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="share">
+
+<div class="banner">
+  <div class="CTA">
+    <h1>Transfer data system</h1>
+    <h2>Send up to 1 To files</h2>
+  </div>
+
+  <div class="click">
+    <%= link_to "Let's Go !",new_user_session_path %>
+  </div>
+
+
+</div>
+
+
+
+
+
+
+<div class="suscribe">
+
+  <div class="title">
+    <h2> What do you need ? </h2>
+  </div>
+
+  <div class="offers">
+    <div class="offer">
+      <h3>Basic offer</h3>
+      <hr>
+      <p> up to 2 Go</p>
+      <p>Free</p>
+      <p> Send your file</p>
+      <p> <%= link_to "Here", "#" %> </p>
+
+    </div>
+    <div class="offer">
+      <h3>Standard offer</h3>
+      <hr>
+      <p> up to 50 Go</p>
+      <p> 5 $ /month </p>
+      <p> Send your file</p>
+      <p> <%= link_to "suscribe", "#" %> </p>
+
+    </div>
+    <div class="offer">
+     <h3>Premium offer</h3>
+     <hr>
+    <p> up to 1 To</p>
+    <p> 15 $ / month </p>
+    <p> Send your file</p>
+    <p> <%= link_to "suscribe", "#" %> </p>
+
+    </div>
+  </div>
+
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+</div>
