--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,44 @@
 // Specific CSS for your home-page
+.banner{
+  background-image: url('https://res.cloudinary.com/dhxefoe7j/image/upload/v1669145540/share/share_1_yd8ld7.png');
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  color: white;
+
+}
+.share h1, h2{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.suscribe{
+  background-color: rgb(109, 107, 246);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  color: white;
+  margin: 0 auto;
+  padding: 24px;
+  align-items: center;
+}
+.offers {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 70%;
+
+}
+.offer{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  border-radius: 2px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  border: rgb(157, 139, 246) solid 1px;
+  padding: 24px;
+  width: 200px;
+  margin: 10px 24px;
+  background-color: rgba(255, 255, 255, 0.184);
+
+
+}
