cards hover, CTA ok

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,18 @@
 <div class="share">
 
 <div class="banner">
-  <div class="CTA">
-    <h1>Transfer data system</h1>
-    <h2>Send up to 1 To files</h2>
+  <div class="up">
+    <div class="CTA">
+        <h1>Transfer data system</h1>
+        <h2>Send up to 1 To files</h2>
+      </div>
+
+      <div class="click">
+        <%= link_to "Send files",new_user_session_path %>
+      </div>
+
   </div>
 
-  <div class="click">
-    <%= link_to "Let's Go !",new_user_session_path %>
-  </div>
 
 
 </div>
@@ -26,7 +30,7 @@
 
   <div class="offers">
     <div class="offer">
-      <h3>Basic offer</h3>
+      <h3>Basic <br> offer</h3>
       <hr>
       <p> up to 2 Go</p>
       <p>Free</p>
