--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,15 +4,26 @@
   background-position: center;
   background-size: cover;
   height: 100vh;
-  color: white;
 
+
+}
+.up{
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px;
 }
 .share h1, h2{
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .suscribe{
-  background-color: rgb(109, 107, 246);
+  // background-image: url('https://res.cloudinary.com/dhxefoe7j/image/upload/v1669203800/share/Sans_titre_-_2022-11-23T124312.498_sesfpq.png');
+  // background-position: center;
+  // background-size: cover;
+ background-color: rgb(109, 107, 246);
+  // background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -32,6 +43,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
   border-radius: 2px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   border: rgb(157, 139, 246) solid 1px;
@@ -41,4 +53,32 @@
   background-color: rgba(255, 255, 255, 0.184);
 
 
+}
+.offer:hover{
+  border: white 1px solid;
+}
+.offer h3{
+  text-align: center;
+}*.title{
+  font-size: 40px;
+  padding: 20px;
+}
+
+.click a{
+  text-decoration: none;
+  color: white;
+  background-color: rgb(109, 107, 246);
+  padding: 6px 10px;
+  border-radius: 3px;
+  font-size: 24px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.click a:hover {
+  text-decoration: none;
+  color: white;
+  background-color: rgb(136, 134, 248);
+  padding: 6px 10px;
+  border-radius: 3px;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
 }
