--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -54,6 +54,22 @@
 
 
 }
+.offer a{
+  border: white 1px solid;
+  padding: 4px 8px;
+  color: white;
+  text-decoration: none;
+  border-radius: 16px;
+}
+.offer a:hover{
+  border: white 1px solid;
+  padding: 6px 10px;
+  color: white;
+  background-color: rgba(255, 255, 255, 0.329);
+  text-decoration: none;
+  border-radius: 16px;
+  font-weight: bold;
+}
 .offer:hover{
   border: white 1px solid;
 }
