--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <%#= render 'shared/navbar'unless params[:action] == 'home' %>
+    <%#= render 'shared/navbar'unless params[:action] == 'home' || params[:action] == "new_user_session" %>
     <%= render 'shared/flashes' %>
 
     <%= yield %>
