--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,7 @@
       <p> up to 2 Go</p>
       <p>Free</p>
       <p> Send your file</p>
-      <p> <%= link_to "Here", "#" %> </p>
+      <p> <%= link_to "Here", dashboard_path %> </p>
 
     </div>
     <div class="offer">
@@ -44,7 +44,7 @@
       <p> up to 50 Go</p>
       <p> 5 $ /month </p>
       <p> Send your file</p>
-      <p> <%= link_to "suscribe", "#" %> </p>
+      <p> <%= link_to "suscribe", standard_path %> </p>
 
     </div>
     <div class="offer">
@@ -53,7 +53,7 @@
     <p> up to 1 To</p>
     <p> 15 $ / month </p>
     <p> Send your file</p>
-    <p> <%= link_to "suscribe", "#" %> </p>
+    <p> <%= link_to "suscribe", premium_path %> </p>
 
     </div>
   </div>
