--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -35,6 +35,7 @@
   <div class="sendbox">
 <label for="myfile">Select a file:</label>
 <input type="file" id="myfile" name="myfile">
+<input type="submit" value="Ok">
   </div>
 
   <div class="formula">
