--- a/app/views/pages/premium.html.erb
+++ b/app/views/pages/premium.html.erb
@@ -33,15 +33,20 @@
 
 
 
-<h1> Premium offer</h1>
-
-<p>Upload and send up to 1 To file.</p>
-<p>Monthly price : 15 $</p>
-<p>No engagement, stop your subscription anytime.</p>
 
 <div class="cash">
 
+    <div class="text">
+      <h1> Premium offer</h1>
 
+        <p>Upload and send up to 1 To file.</p>
+        <p>Monthly price : 15 $</p>
+        <p>No engagement, stop your subscription anytime.</p>
+    </div>
+
+
+
+ 
 
     <div class="pay">
       <div class="row">
