--- a/app/assets/stylesheets/pages/_premium.scss
+++ b/app/assets/stylesheets/pages/_premium.scss
@@ -87,8 +87,22 @@ span.price {
   width: 40%;
 }
 .cash{
-  margin: 30px auto;
+  margin: 0 auto;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-around;
+  background-image: url('https://res.cloudinary.com/dhxefoe7j/image/upload/v1669215245/share/To_1_jgj2rb.png');
+  background-position: center;
+  background-size: cover;
+  padding: 40px;
+  height: 100%;
+}
+
+
+.text{
+  color: white;
+}
+.text h1{
+  color: rgb(109, 107, 246) ;
+  font-size: 50px;
+
 }
