--- a/app/views/pages/standard.html.erb
+++ b/app/views/pages/standard.html.erb
@@ -28,15 +28,17 @@
 
 
 
-<h1> Standard offer</h1>
 
-<p>Upload and send up to 50 Go file.</p>
-<p>Monthly price : 5 $</p>
-<p>No engagement, stop your subscription anytime.</p>
 
 <div class="cash">
 
+    <div class="text">
+    <h1> Standard offer</h1>
 
+        <p>Upload and send up to 50 Go file.</p>
+        <p>Monthly price : 5 $</p>
+        <p>No engagement, stop your subscription anytime.</p>
+    </div>
 
     <div class="pay">
       <div class="row">
