--- a/app/views/pages/premium.html.erb
+++ b/app/views/pages/premium.html.erb
@@ -46,13 +46,13 @@
 
 
 
- 
+
 
     <div class="pay">
       <div class="row">
         <div class="col-75">
           <div class="container">
-            <form action="/action_page.php">
+            <form action="form">
 
               <div class="row">
                 <div class="col-50">
