--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<div class="home">
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "https://res.cloudinary.com/dhxefoe7j/image/upload/v1669211628/share/share_5_nxhnvk.png" %>
@@ -24,6 +25,8 @@
       <% end %>
     </ul>
   </div>
+</div>
+
 </div>
 
 <%#
