--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -98,3 +98,11 @@
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
+.home .navbar{
+
+  background-color: black;
+}
+.home .nav-link{
+color: rgb(109, 107, 246);
+
+}
