--- a/app/assets/stylesheets/pages/_premium.scss
+++ b/app/assets/stylesheets/pages/_premium.scss
@@ -94,7 +94,7 @@ span.price {
   background-position: center;
   background-size: cover;
   padding: 40px;
-  height: 100%;
+  height: 100vh;
 }
 
 
@@ -105,4 +105,20 @@ span.price {
   color: rgb(109, 107, 246) ;
   font-size: 50px;
 
+}
+.navvv .navbar{
+  background-color: black;
+}
+.navvv .navbar .nav-link{
+  color: rgb(109, 107, 246);
+  padding: 6px 8px;
+  border: rgb(109, 107, 246) 1px solid ;
+  border-radius: 12px;
+  margin: 6px;
+}
+.navvv .navbar .nav-link:hover{
+  color: rgb(109, 107, 246);
+  font-weight: bold;
+  background-color: rgba(255, 255, 255, 0.13);
+  color: white;
 }
