--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,29 +1,32 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to root_path, class: "navbar-brand" do %>
-    <%= image_tag "https://res.cloudinary.com/dhxefoe7j/image/upload/v1669211628/share/share_5_nxhnvk.png" %>
-  <% end %>
+<div class="navvv">
+  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+    <%= link_to root_path, class: "navbar-brand" do %>
+      <%= image_tag "https://res.cloudinary.com/dhxefoe7j/image/upload/v1669211628/share/share_5_nxhnvk.png" %>
+    <% end %>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to "Home", dashboard_path, class: "nav-link" %>
-        </li>
-        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <% if user_signed_in? %>
+          <li class="nav-item active">
+            <%= link_to "Home", dashboard_path, class: "nav-link" %>
+          </li>
+          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
 
-        </li>
-      <% else %>
-        <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-        </li>
-      <% end %>
-    </ul>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
   </div>
+
 </div>
 
 <%#
@@ -32,36 +35,31 @@
 
 <div class="dash">
 
-  <div class="sendbox">
-<label for="myfile">Select a file:</label>
-<input type="file" id="myfile" name="myfile">
-<input type="submit" value="Ok">
-  </div>
-
-  <div class="formula">
-
-
-    <div class="upgrade-standard">
-
-      <%= link_to "Standard Offer" %>
-
+  <div class="send">
+    <div class="sendbox">
+      <h2>Transfer your files</h2>
+      <br>
+      <%# <label for="myfile">Select a file:</label> %>
+      <input type="file" id="myfile" name="myfile">
+      <br>
+      <br>
+      <input type="submit" id="get"value="Get a link">
     </div>
 
-    <div class="upgrade-premium">
+    <div class="formula">
+      <div class="upgrade-standard">
+        <p> Wanna upgrade ? :</p>
+        <%= link_to "Standard Offer", standard_path %>
+      </div>
 
-    <%= link_to "Premium Offer" %>
+      <div class="upgrade-premium">
+      <%= link_to "Premium Offer" , premium_path%>
+      </div>
     </div>
   </div>
 
-
-
-
-
-
-
-
-
-
-
-
+  <div class="right">
+  <h1>Share</h1>
+  <p>The fast and secure way</p>
+  </div>
 </div>
