--- a/app/assets/stylesheets/pages/_standard.scss
+++ b/app/assets/stylesheets/pages/_standard.scss
@@ -1,8 +1,16 @@
 .cash{
 
-  background-image: url('https://res.cloudinary.com/dhxefoe7j/image/upload/v1669289057/share/To_4_hfuszo.png');
+  background-image: url('https://res.cloudinary.com/dhxefoe7j/image/upload/v1669300088/share/To_6_frqdo0.png');
   background-position: center;
   background-size: cover;
 
   height: 100vh;
+
+
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+
+  padding: 40px;
+
 }
