--- a/app/assets/stylesheets/pages/_premium.scss
+++ b/app/assets/stylesheets/pages/_premium.scss
@@ -103,7 +103,8 @@ span.price {
 }
 .text h1{
   color: rgb(109, 107, 246) ;
-  font-size: 50px;
+  font-size: 70px;
+  font-weight: bold;
 
 }
 .navvv .navbar{
